add top bar, get started, crescent setup

--- a/index.html
+++ b/index.html
@@ -3,16 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title></title>
   </head>
   <body>
-    <div class="bg">
-      <img
-        src="https://assets.nflxext.com/ffe/siteui/vlv3/8200f588-2e93-4c95-8eab-ebba17821657/web/IN-en-20250616-TRIFECTA-perspective_9cbc87b2-d9bb-4fa8-9f8f-a4fe8fc72545_large.jpg"
-        alt=""
-      />
-      <div>TOPBAR</div>
-      <div>main area</div>
+    <div class="netflix_section_1">
+      <div class="netflix_section_1_top_bar">
+        <div class="netflix_section_1_top_bar_logo">TODO: LOGO HERE</div>
+        <div class="netflix_section_1_top_bar_buttons">
+          <div class="netflix_section_1_top_bar_buttons_language">
+            TODO: Language Selector
+          </div>
+          <div class="netflix_section_1_top_bar_buttons_signin">
+            TODO: Sign In Button
+          </div>
+        </div>
+      </div>
+      <div class="netflix_section_1_get_started">
+        <div class="netflix_section_1_get_started_text_1">
+          Unlimited movies, TV shows and more
+        </div>
+        <div class="netflix_section_1_get_started_text_2">
+          Starts at ₹149. Cancel at any time.
+        </div>
+        <div class="netflix_section_1_get_started_text_3">
+          Ready to watch? Enter your email to create or restart your membership.
+        </div>
+        <div class="netflix_section_1_get_started_email_input_and_button">
+          <div class="netflix_section_1_get_started_email_input">
+            TODO: Enter Email Address
+          </div>
+          <div class="netflix_section_1_get_started_button">
+            TODO: Get Started Button
+          </div>
+        </div>
+      </div>
+      <div class="netflix_section_1_crescent"></div>
     </div>
   </body>
 </html>
