--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <input type="text" name="" id="" placeholder="Email Address" />
           </div>
           <div class="netflix_section_1_get_started_button">
-            <button>
+            <button class="get-started-button" >
               Get Started
               <svg
                 xmlns="http://www.w3.org/2000/svg"
