add favicon (not to be read as "fav-icon")

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <link rel="icon" id="favicon" sizes="32x32" href="favicon.ico" />
+    <title>Netflix</title>
   </head>
   <body>
     <div class="netflix_section_1">
@@ -57,7 +58,7 @@
             <input type="text" name="" id="" placeholder="Email Address" />
           </div>
           <div class="netflix_section_1_get_started_button">
-            <button class="get-started-button" >
+            <button class="get-started-button">
               Get Started
               <svg
                 xmlns="http://www.w3.org/2000/svg"
