--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="netflix_section_1_get_started_email_input_and_button">
           <div class="netflix_section_1_get_started_email_input">
-            <input type="text" name="" id="" placeholder="Email Address" />
+            <input type="text" name="" class="email-input" placeholder="Email Address" />
           </div>
           <div class="netflix_section_1_get_started_button">
             <button class="get-started-button">
