--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
         </div>
         <div class="netflix_section_1_get_started_email_input_and_button">
           <div class="netflix_section_1_get_started_email_input">
-            <input type="text" name="" class="email-input" placeholder="Email address" />
+            <input
+              type="text"
+              name=""
+              class="email-input"
+              placeholder="Email address"
+            />
           </div>
           <div class="netflix_section_1_get_started_button">
             <button class="get-started-button">
@@ -102,6 +107,22 @@
         </div>
       </div>
       <div class="netflix_section_1_crescent"></div>
+    </div>
+    <div class="netflix_section_2">
+            <div class="image-scrollbar-unit">
+        <h2 class="trending-now-text" > Trending Now</h2>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+        <div class="scroll-images"></div>
+      </div>
     </div>
   </body>
 </html>
