--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Netflix</title>
   </head>
   <body>
+    <script>
+      console.log("Hello Shruti");
+    </script>
     <div class="netflix_section_1">
       <div class="netflix_section_1_top_bar">
         <div class="netflix_section_1_top_bar_logo">
@@ -109,8 +112,8 @@
       <div class="netflix_section_1_crescent"></div>
     </div>
     <div class="netflix_section_2">
-            <div class="image-scrollbar-unit">
-        <h2 class="trending-now-text" > Trending Now</h2>
+      <div class="image-scrollbar-unit">
+        <h2 class="trending-now-text">Trending Now</h2>
         <div class="scroll-images"></div>
         <div class="scroll-images"></div>
         <div class="scroll-images"></div>
