--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <script>
-      console.log("Hello Gudda");
+      console.log("Hello Gudda my love");
     </script>
     <div class="netflix_section_1">
       <div class="netflix_section_1_top_bar">
